force-app/main/default/objects/Expense__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>My Contact is my client name.</description>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>