force-app/main/default/objects/Expense__c/fields/Reason_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recommended__c</fullName>
    <description>Enter reason for reimburse if the box reimbursed is checked.</description>
    <label>Reason Recommended</label>
    <type>TextArea</type>
</CustomField>